welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:4: error: ')' expected but 'else' found.
	else if ( a<10 || a>10 &&  b<10 || b>10 ) { return 0 }
        ^