welcome.lessons.welcome.bat.bool1.Max1020.scala.code
def max1020(a:Int, b:Int):Int = {
	if ( 10<=a && a<=20 ||  10<=b && b<=20 ) { return Math.max(a,b):Int}
	if (( b<10 || b>20 ) && ( 10<=a && a<=20) { return a} 
	else if ( a<10 || a>10 &&  b<10 || b>10 ) { return 0 }
	else   { return 0 }
}
